api setup auth runnning
